# teensy-audio-ad5754-ad7606

./: CMakeLists.txt  README.md  common_ad5754_ad7606.cpp  common_ad5754_ad7606.h  input_ad7606.cpp  input_ad7606.h  input_shared_ad7606.cpp  input_shared_ad7606.h  main.cpp  output_ad5754.cpp  output_ad5754.h  output_shared_ad5754_dual.cpp  output_shared_ad5754_dual.h  output_spi.cpp  output_spi.h  wavedrom.json  wavedrom.json5
examples/03_full_bandwidth_spi/: 03_full_bandwidth_spi.ino
examples/03_full_bandwidth_spi_xy_scope/: 03_full_bandwidth_spi_xy_scope.ino
examples/8_scopes/: 8_scopes.ino
examples/apc40/01_apc40_lfo/: 01_apc40_lfo.ino
examples/apc40/02_apc40_lfo_refac/: 02_apc40_lfo_refac.ino
examples/audioin_to_cvout_scope/: audioin_to_cvout_scope.ino
examples/basic/: basic.ino
examples/basic_st7735_t3/: basic_st7735_t3.ino
examples/scope/scope/: scope.ino
examples/scope/scope_st7735_t3/: scope_st7735_t3.ino
examples/xy_scope/: xy_scope.ino
examples/xy_scope_sinfm/: xy_scope_sinfm.ino
